--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -92,7 +92,7 @@
 	#header {
 		background-image: url("images/top-1280.svg"), url("images/overlay.png"), url("../images/header.jpg");
 		background-size: 1280px 184px,						auto,							cover;
-		padding: 3em 0 7em 0;
+		padding: 14vh 0 14vh 0;
 	}
 
 		#header:before {
